--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.4",
     "@react-navigation/native": "^7.0.14",
+    "@reduxjs/toolkit": "^2.8.2",
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
     "expo-font": "~13.3.1",
@@ -35,12 +36,14 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@testing-library/react-native": "^13.2.0",
     "@types/react": "~19.0.10",
+    "@types/react-redux": "^7.1.34",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
     "react-test-renderer": "^19.0.0",
