--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@gorhom/bottom-sheet": "^5.1.4",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.8.2",
+    "date-fns": "^4.1.0",
     "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
     "expo-font": "~13.3.1",
