feat: add eas build

--- a/app.json
+++ b/app.json
@@ -22,6 +22,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "edgeToEdgeEnabled": true,
       "package": "com.x0usen.newsapp"
     },
     "web": {
@@ -36,6 +37,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "521d2ed1-c298-48c5-ba86-1a6c538a9ee0"
+      }
     }
   }
 }
