--- a/package.json
+++ b/package.json
@@ -16,32 +16,33 @@
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.4",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
-    "expo": "^53.0.9",
-    "expo-blur": "~14.1.4",
+    "expo": "53.0.11",
+    "expo-blur": "~14.1.5",
     "expo-font": "~13.3.1",
-    "expo-image": "~2.1.7",
-    "expo-linear-gradient": "~14.1.4",
+    "expo-image": "~2.3.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.7",
-    "expo-splash-screen": "~0.30.8",
+    "expo-router": "~5.1.0",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.7",
+    "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "expo-dev-client": "~5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -49,7 +50,7 @@
     "@types/react": "~19.0.10",
     "@types/react-redux": "^7.1.34",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.5",
+    "jest-expo": "~53.0.7",
     "react-test-renderer": "^19.0.0",
     "typescript": "~5.8.3"
   },
