--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^4.1.0",
     "expo": "53.0.11",
     "expo-blur": "~14.1.5",
+    "expo-dev-client": "~5.2.0",
     "expo-font": "~13.3.1",
     "expo-image": "~2.3.0",
     "expo-linear-gradient": "~14.1.5",
@@ -32,6 +33,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.8",
     "expo-web-browser": "~14.1.6",
+    "moti": "^0.30.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.3",
@@ -41,8 +43,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0",
-    "react-redux": "^9.2.0",
-    "expo-dev-client": "~5.2.0"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
